attempt another confirmation mobile scroll fix

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -31,6 +31,11 @@
   }
 }
 
+.prevent-modal-scroll {
+  touch-action: none;
+  overflow: hidden;
+}
+
 .prevent-navbar-scroll {
   overflow: hidden;
 
